--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -5,7 +5,7 @@
   margin-right: auto;
   margin-left: auto;
 
-  // outline: 3px solid red;
+  outline: 3px solid red;
 
   // MOBILE
   @media screen and (min-width: 480px) {
