--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,20 +1,12 @@
 // Header
-header {
+header .container {
   position: relative;
-
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
-
-  @media screen and (min-width: 480px) {
-    width: 480px;
-  }
-  @media screen and (min-width: 768px) {
-    width: 768px;
-  }
-  @media screen and (min-width: 1200px) {
-    width: 1200px;
+  padding-top: 0;
+  padding-bottom: 0;
+  border-bottom: 1px solid rgb(236, 236, 236);
+  z-index: 999;
+  @media screen and (max-width: 767px) {
+    width: 100%;
   }
 }
 // Logo
