--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -7,6 +7,11 @@
 
   outline: 3px solid red;
 
+  @media screen and (max-width: 767px) {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
   // MOBILE
   @media screen and (min-width: 480px) {
     width: 480px;
