--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,28 +1,19 @@
 .footer {
   background-color: $bg-color;
   max-width: 1600px;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 60px;
-  padding-bottom: 60px;
 
   text-align: center;
-
+}
+.footer .container {
   @media screen and (min-width: 768px) {
-    width: 768px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
   }
   @media screen and (min-width: 1200px) {
-    width: 1200px;
-    padding-top: 94px;
-    padding-bottom: 94px;
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    text-align: start;
   }
 }
 .footer-content {
@@ -178,6 +169,10 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
 
+  @media screen and (max-width: 480px) {
+    width: 100%;
+  }
+
   @media screen and (min-width: 1200px) {
     width: 358px;
     height: 50px;
@@ -223,6 +218,9 @@
 
   color: $primary-bg-color;
   cursor: pointer;
+  @media screen and (max-width: 480px) {
+    width: 100%;
+  }
 
   @media screen and (min-width: 1200px) {
     margin-top: 0;
