--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -8,7 +8,7 @@
   background: {
     color: #2f303a;
     image: linear-gradient(to top, $hero-color, $hero-color),
-      url("/images/mobile/Hero-mobile.jpg");
+      url("../../images/mobile/Hero-mobile.jpg");
     repeat: no-repeat;
     position: center;
     size: cover;
