--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -5,7 +5,7 @@
   margin-right: auto;
   margin-left: auto;
 
-  outline: 3px solid red;
+  // outline: 3px solid red;
 
   @media screen and (max-width: 767px) {
     padding-top: 30px;
