--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -217,9 +217,9 @@
 
   color: $primary-bg-color;
   cursor: pointer;
-  @media screen and (max-width: 480px) {
-    width: 100%;
-  }
+  // @media screen and (max-width: 480px) {
+  //   width: 100%;
+  // }
 
   @media screen and (min-width: 1200px) {
     margin-top: 0;
