--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -779,6 +779,12 @@ header .container {
   margin-bottom: 0;
 }
 
+@media screen and (max-width: 479px) {
+  .buttons li {
+    margin-right: 8px;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .buttons li {
     margin-bottom: 30px;
@@ -1244,12 +1250,6 @@ header .container {
   letter-spacing: 0.06em;
   color: #ffffff;
   cursor: pointer;
-}
-
-@media screen and (max-width: 480px) {
-  .subscription button {
-    width: 100%;
-  }
 }
 
 @media screen and (min-width: 1200px) {
