--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -38,6 +38,9 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  @media screen and (max-width: 479px) {
+    min-width: 100%;
+  }
   @media screen and (min-width: 768px) {
     min-width: 450px;
     position: absolute;
