--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -43,6 +43,9 @@
   &:last-child {
     margin-bottom: 0;
   }
+  @media screen and (max-width: 479px) {
+    margin-right: 8px;
+  }
   @media screen and (min-width: 480px) {
     margin-bottom: 30px;
 
