--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -28,7 +28,7 @@
     }
   }
 
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 480px) and (max-width: 767px) {
     &:nth-child(2n + 1) {
       margin-right: 15px;
     }
