--- a/css/main.css
+++ b/css/main.css
@@ -540,13 +540,13 @@ header .container {
 
 .site-nav .link {
   color: #212121;
+  font-weight: 500;
 }
 
 @media screen and (max-width: 767px) {
   .site-nav .link {
     font-family: Roboto;
     font-style: normal;
-    font-weight: 500;
     font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.02em;
@@ -923,6 +923,10 @@ header .container {
   }
 }
 
+.workes-container {
+  padding-top: 0;
+}
+
 @media screen and (max-width: 1199px) {
   .workes-container {
     display: none;
@@ -1010,7 +1014,7 @@ header .container {
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .team-item {
     width: calc((100% - 30px) / 2);
-    margin-right: 15px;
+    margin-right: 30px;
   }
   .team-item:nth-child(2n) {
     margin-right: 0;
@@ -1164,7 +1168,7 @@ header .container {
   }
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .clients-list:nth-child(2n + 1) {
     margin-right: 15px;
   }
@@ -1265,9 +1269,7 @@ header .container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    text-align: start;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
