--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -11,7 +11,7 @@
   }
   @media screen and (min-width: 1200px) {
     display: flex;
-    align-items: center;
+    text-align: start;
     justify-content: space-between;
   }
 }
