--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -11,6 +11,9 @@
     justify-content: center;
     margin-bottom: 56px;
   }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 .btn {
   display: inline-block;
@@ -55,6 +58,9 @@
     &:not(:last-child) {
       margin-right: 8px;
     }
+  }
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
   }
 }
 
