--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -28,31 +28,36 @@
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx) {
   .hero {
-    background-image: url(../images/mobile/Hero-mobile@2x.jpg);
+    background-image: linear-gradient(to top, $hero-color, $hero-color),
+      url(../images/mobile/Hero-mobile@2x.jpg);
   }
 }
 
 @media screen and (min-width: 481px) {
   .hero {
-    background-image: url(../images/table/Hero-table.jpg);
+    background-image: linear-gradient(to top, $hero-color, $hero-color),
+      url(../images/table/Hero-table.jpg);
   }
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
     .hero {
-      background-image: url(../images/table/Hero-table@2x.jpg);
+      background-image: linear-gradient(to top, $hero-color, $hero-color),
+        url(../images/table/Hero-table@2x.jpg);
     }
   }
 }
 @media screen and (min-width: 769px) {
   .hero {
-    background-image: url(../images/desktop/Hero-desktop.jpg);
+    background-image: linear-gradient(to top, $hero-color, $hero-color),
+      url(../images/desktop/Hero-desktop.jpg);
   }
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
     .hero {
-      background-image: url(../images/desktop/Hero-desktop@2x.jpg);
+      background-image: linear-gradient(to top, $hero-color, $hero-color),
+        url(../images/desktop/Hero-desktop@2x.jpg);
     }
   }
 }
