--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -615,13 +615,6 @@ header .container {
           align-items: center;
 }
 
-@media screen and (min-width: 768px) {
-  .auth-nav {
-    padding-top: 21px;
-    padding-bottom: 21px;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .auth-nav {
     display: -webkit-box;
@@ -1332,6 +1325,9 @@ header .container {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     -webkit-box-flex: 1;
         -ms-flex-positive: 1;
             flex-grow: 1;
