--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -48,6 +48,7 @@
   @media screen and (min-width: 768px) {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     flex-grow: 1;
     padding: 0;
   }
